# TimeBlame

./: LICENSE
time-blame/: main.py  pyproject.toml
time-blame/time_blame/: __init__.py  app.py  git_ops.py  main.py  syntax.py
